tests/preproc_samples/invalid/multiline_macros_in_inline.mas
%m m1 {
    a;
}

%mi mi1 m1;

%m m2 {
    a;
    b;
    c;
}

%mi mi2 m2;

%m m3 {
    m1;
}

%mi mi3 m3;

%m m4 {
    m2;
}

%mi mi4 m4;

%i i {
    mi1;
    mi2 | mi3;
    mi4;
}